<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_visualizarnota">

    <fragment
        android:id="@+id/nav_visualizarnota"
        android:name="delacruz.examenfinal.alumnoapp.ui.VisualizarNotas.visualizarnotaFragment"
        android:label="@string/menu_visualizarnotas"
        tools:layout="@layout/fragment_visualizarnota" />

    <fragment
        android:id="@+id/nav_configuraciones"
        android:name="delacruz.examenfinal.alumnoapp.ui.Configuraciones.ConfiguracionesFragment"
        android:label="@string/menu_configuraciones"
        tools:layout="@layout/fragment_configuraciones" />

    <fragment
        android:id="@+id/nav_salir"
        android:name="delacruz.examenfinal.alumnoapp.ui.Salir.SalirFragment"
        android:label="@string/menu_salir"
        tools:layout="@layout/fragment_salir" />
</navigation>