<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.Configuraciones.ConfiguracionesFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/N2txtPreferencias"
        android:textAlignment="center"
        android:layout_marginVertical="40dp"
        android:paddingVertical="10dp"
        android:background="@color/green_txts"
        android:textColor="@color/white"
        android:textStyle="bold"></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:padding="20dp"
        android:background="@drawable/efredformulario2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/N2txtSeleccionarTema"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:layout_marginVertical="20dp"
            android:layout_weight="1"
            ></TextView>

        <Spinner
            android:id="@+id/spiTema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/Tema"
            android:spinnerMode="dropdown"
            android:layout_gravity="center"></Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:padding="20dp"
        android:background="@drawable/efredformulario2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/N2txtSeleccionarIdioma"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:layout_marginVertical="20dp"
            android:layout_weight="1"
            ></TextView>

        <Spinner
            android:id="@+id/spiIdioma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/Idioma"
            android:spinnerMode="dropdown"
            android:layout_gravity="center"></Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:padding="20dp"
        android:background="@drawable/efredformulario2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/N2txtSeleccionarTamaL"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:layout_marginVertical="20dp"
            android:layout_weight="1"
            ></TextView>

        <Spinner
            android:id="@+id/spiTamFuen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/TamaLetra"
            android:spinnerMode="dropdown"
            android:layout_gravity="center"></Spinner>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="50dp"
        android:text="@string/N2btnGuardarCambios"
        android:background="@drawable/efredbotones2"
        app:icon="@drawable/ic_guardar"></com.google.android.material.button.MaterialButton>


</LinearLayout>