<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.VisualizarNotas.visualizarnotaFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/N1txtVisualizarNot"
            android:textAlignment="center"
            android:layout_marginVertical="40dp"
            android:paddingVertical="10dp"
            android:background="@color/green_txts"
            android:textColor="@color/white"
            android:textStyle="bold"></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            android:padding="20dp"
            android:background="@drawable/efredformulario2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/N1txtSeleccCurso"
                android:textAlignment="textStart"
                android:textStyle="bold"
                android:layout_marginVertical="20dp"
                ></TextView>
            <Spinner
                android:id="@+id/spiCursoA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dialog">
            </Spinner>
        </LinearLayout>
        <View
            android:id="@+id/divider"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/purple_500" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/N1txtNotas"
            android:textAlignment="textStart"
            android:layout_marginVertical="20dp"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:background="@color/green2_txts"
            android:textColor="@color/white"
            android:textStyle="bold"></TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="20dp"
            android:padding="20dp"
            android:background="@drawable/efredformulario2">
            <ListView
                android:id="@+id/recLisNotas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/ListNotas"
                ></ListView>
        </LinearLayout>
</LinearLayout>